<?xml version="1.0"?>
<package format="2">
  <name>roboy_motor_calibration</name>
  <version>0.0.0</version>
  <description>roboy motor calibration plugin for rqt</description>
  <maintainer email="simon.trendel@tum.de">Simon Trendel</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>roslint</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_cpp</depend>
  <depend>std_msgs</depend>
  <depend>roboy_middleware_msgs</depend>
  <depend>common_utilities</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
